# rpi_pico_w_a2dp_sink_demo

./: .gitignore  CMakeLists.txt  board_connection.txt  build_commands.txt
A2DP_example/: CMakeLists.txt  build_commands.txt
A2DP_example/inc/: picow_bt_common.h
A2DP_example/lib/ssd1306/: CMakeLists.txt
A2DP_example/src/: main.c
Firmware/: CMakeLists.txt  build_commands.txt  libraries_import.cmake
Firmware/app/blink/: CMakeLists.txt
Firmware/app/blink/src/: main.c
Firmware/app/bt_a2dp_sink/: CMakeLists.txt
Firmware/app/bt_a2dp_sink/inc/: a2dp_sink_demo.h
Firmware/app/bt_a2dp_sink/src/: a2dp_sink_demo.c  btstack_audio_pico.c  main.c
Firmware/app/hello_world/: CMakeLists.txt
Firmware/app/hello_world/src/: main.c
Firmware/app/i2c_bus_scan/: CMakeLists.txt
Firmware/app/i2c_bus_scan/src/: main.c
Firmware/app/keypad_test/: CMakeLists.txt
Firmware/app/keypad_test/src/: main.c
Firmware/app/sdcard_test/: CMakeLists.txt
Firmware/app/sdcard_test/src/: main.c
Firmware/app/usb_hid_multimedia_keypad/: CMakeLists.txt
Firmware/app/usb_hid_multimedia_keypad/inc/: keypad_settings.h  main.h  tusb_config.h  usb_descriptors.h  usb_keypad.h
Firmware/app/usb_hid_multimedia_keypad/src/: main.c  usb_descriptors.c  usb_keypad.c
Firmware/app/usb_msc/: CMakeLists.txt
Firmware/app/usb_msc/inc/: main.h  msc_disk.h  spi_sdmmc.h  tusb_config.h
Firmware/app/usb_msc/src/: main.c  msc_disk.c  spi_sdmmc.c  usb_descriptors.c
Firmware/app/usb_stereo_microphone/: CMakeLists.txt  README.md
Firmware/app/usb_stereo_microphone/inc/: main.h  usb_descriptors.h
Firmware/app/usb_stereo_microphone/src/: main.c  usb_microphone.c
Firmware/app/usb_stereo_speaker/: CMakeLists.txt  README.md
Firmware/app/usb_stereo_speaker/inc/: main.h
Firmware/app/usb_stereo_speaker/src/: main.c  usb_speaker.c
Firmware/app/usb_uac2_headset/: CMakeLists.txt
Firmware/app/usb_uac2_headset/inc/: main.h  tusb_config.h  usb_headset.h  usb_headset_settings.h
Firmware/app/usb_uac2_headset/src/: main.c  usb_descriptors.c  usb_headset.c
Firmware/app/usb_uac2_hid_headset/: CMakeLists.txt
Firmware/app/usb_uac2_hid_headset/inc/: tusb_config.h  usb_common_cb.h  usb_descriptors.h  usb_headset.h  usb_headset_settings.h  usb_keypad.h
Firmware/app/usb_uac2_hid_headset/src/: main.c  usb_common_cb.c  usb_descriptors.c  usb_headset.c  usb_keypad.c
Firmware/app/usb_uac2_stereo_mic_headset/: CMakeLists.txt
Firmware/app/usb_uac2_stereo_mic_headset/inc/: main.h  tusb_config.h  usb_descriptors.h  usb_headset.h  usb_headset_settings.h
Firmware/app/usb_uac2_stereo_mic_headset/src/: main.c  usb_headset.c
Firmware/app/watches/: CMakeLists.txt
Firmware/app/watches/src/: main.c
Firmware/inc/: board_defines.h  build_defs.h  keypad.h
Firmware/inc/pcf8563_i2c/: pcf8563_i2c.h
Firmware/src/: keypad.c
Firmware/src/pcf8563_i2c/: pcf8563_i2c.c
HW/rpi_pico_media_board/: [1]Power.kicad_sch  [2]MCU.kicad_sch  [3]PCM5102.kicad_sch  [4]TF_CARD.kicad_sch  [5]Macro_Pad.kicad_sch  [6]I2C_Peripherals.kicad_sch  fp-info-cache  fp-lib-table  place_footprints.ini  rpi_pico_media_board.bak  rpi_pico_media_board.kicad_pcb  rpi_pico_media_board.kicad_prl  rpi_pico_media_board.kicad_pro  rpi_pico_media_board.kicad_sch  rpi_pico_media_board.kicad_sym  rpi_pico_media_board_power.kicad_sym
HW/rpi_pico_media_board/components/CR1220-2/: CR1220-2.lib  CR1220-2.mod
HW/rpi_pico_media_board/components/Power/LS1205EVD33/: LS1205EVD33.kicad_mod  LS1205EVD33.lib  LS1205EVD33.mod
HW/rpi_pico_media_board/components/Power/SY8003ADFC/: SON50P200X200X65-9N.kicad_mod  SY8003ADFC.kicad_sym  SY8003ADFC.lib  SY8003ADFC.mod
HW/rpi_pico_media_board/components/SSD1306/: 128x64OLED.kicad_mod
HW/rpi_pico_media_board/components/TF-01A/: TF-01A.lib  TF-01A.mod
HW/rpi_pico_media_board/rpi_pico_media_board.pretty/: 128x64OLED.kicad_mod  AudioJack_3.5mm_PJ311.kicad_mod  CR12202.kicad_mod  SW_DPDT_XLX.kicad_mod  TF01A.kicad_mod
HW/rpi_pico_media_board/rpi_pico_media_board_power.pretty/: LS1205EVD33.kicad_mod
KiCad/: [1]Power.kicad_sch  [2]MCU.kicad_sch  [3]PCM5102.kicad_sch  [4]TF_CARD.kicad_sch  [5]Macro_Pad.kicad_sch  [6]I2C_Peripherals.kicad_sch  rpi_pico_media_board.bak  rpi_pico_media_board.kicad_pcb  rpi_pico_media_board.kicad_prl  rpi_pico_media_board.kicad_pro  rpi_pico_media_board.kicad_sch  rpi_pico_media_board.kicad_sym  rpi_pico_media_board_power.bak  sym-lib-table
KiCad/bom/: ibom.html
KiCad/components/Power/LS1205EVD33/: LS1205EVD33.dcm  LS1205EVD33.kicad_sym  LS1205EVD33.stp
KiCad/components/Power/SY8003ADFC/: SY8003ADFC.dcm
KiCad/components/SSD1306/: ssd1306.kicad_sym
KiCad/manufacture/bom/: rpi_pico_media_board.csv
KiCad/manufacture/gerber/: rpi_pico_media_board-B_Cu.gbr  rpi_pico_media_board-B_Mask.gbr  rpi_pico_media_board-B_Paste.gbr  rpi_pico_media_board-B_Silkscreen.gbr  rpi_pico_media_board-Edge_Cuts.gbr  rpi_pico_media_board-F_Cu.gbr  rpi_pico_media_board-F_Mask.gbr  rpi_pico_media_board-F_Paste.gbr  rpi_pico_media_board-F_Silkscreen.gbr  rpi_pico_media_board-In1_Cu.gbr  rpi_pico_media_board-In2_Cu.gbr  rpi_pico_media_board-job.gbrjob  rpi_pico_media_board.drl
KiCad/rpi_pico_media_board.pretty/: SW_DPDT_XLX.kicad_mod  inmp441.kicad_mod
KiCad/rpi_pico_media_board_power.pretty/: SON50P200X200X65-9N.kicad_mod
common/: picow_bt_common.c  picow_bt_main_background.c
inc/: a2dp_sink_demo.h  board_defines.h
sdcard_test/: CMakeLists.txt  hw_config.c  sdcard_test.c
src/: a2dp_sink_demo.c  btstack_audio_pico.c  main.c
